--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,12 @@
     </plugins>
   </build>
   <dependencies>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1-b02</version>
+        <type>jar</type>
+        <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
